# STEP-PATCH-OPTIMIZER

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
docs/: TODO.md  algorithm_design.md  experiment_protocol.md  implementation_status.md  merge_algorithm_roadmap.md  merge_algorithm_roadmap_concat.md  module_design.md  project_structure.md  run_gui.md  technical_route.md  ui_design.md
docs/refactor_geomagic_autosurface/: 00_PROJECT_STRUCTURE.md  01_MODULE_GUIDE.md  02_REFACTOR_PLAN.md  03_TODO.md  04_PROJECT_WORKFLOW.md  READMD.md
scripts/: bootstrap_windows.ps1  build_debug.ps1  configure.ps1  run_gui.ps1  setup_deps.ps1  test.ps1
src/app/: AppController.cpp  AppController.h  MainWindow.cpp  MainWindow.h  main.cpp
src/brep/: BoundaryWireBuilder.cpp  BoundaryWireBuilder.h  EdgeIndex.cpp  EdgeIndex.h  FaceIndex.cpp  FaceIndex.h  ShapeDocument.cpp  ShapeDocument.h  SurfaceTypeProbe.cpp  SurfaceTypeProbe.h  TopologyGraph.cpp  TopologyGraph.h
src/command/: Command.h  CommandContext.h  CommandHistory.cpp  CommandHistory.h  DetectFeatureCommand.cpp  DetectFeatureCommand.h  ExportStepCommand.cpp  ExportStepCommand.h  LoadStepCommand.cpp  LoadStepCommand.h  LockEdgeCommand.cpp  LockEdgeCommand.h  LockedEdgeRef.cpp  LockedEdgeRef.h  MergePatchCommand.cpp  MergePatchCommand.h  PlaneRegionBatchMergeCommand.cpp  PlaneRegionBatchMergeCommand.h  PlaneRegionMergeCommand.cpp  PlaneRegionMergeCommand.h  SphereRegionBatchMergeCommand.cpp  SphereRegionBatchMergeCommand.h  SphereRegionMergeCommand.cpp  SphereRegionMergeCommand.h  UndoStack.h  UnlockEdgeCommand.cpp  UnlockEdgeCommand.h  ValidateShapeCommand.cpp  ValidateShapeCommand.h
src/common/: Config.h  GeometryTypes.h  Logger.h  Result.h  Tolerance.h
src/feature/: BoundaryClassifier.cpp  BoundaryClassifier.h  CurvatureEstimator.cpp  CurvatureEstimator.h  FeatureEdgeDetector.cpp  FeatureEdgeDetector.h  UserConstraintSet.cpp  UserConstraintSet.h
src/gui/: GuiTypes.h  InspectPanel.cpp  InspectPanel.h  LogPanel.cpp  LogPanel.h  ModelTreePanel.cpp  ModelTreePanel.h  OccViewWidget.cpp  OccViewWidget.h  ParameterPanel.cpp  ParameterPanel.h
src/io/: ProjectSerializer.cpp  ProjectSerializer.h  StepReader.cpp  StepReader.h  StepWriter.cpp  StepWriter.h
src/merge/: CandidateFilters.cpp  CandidateFilters.h  ConeRegionMerger.cpp  ConeRegionMerger.h  CylinderRegionMerger.cpp  CylinderRegionMerger.h  FaceInspectInfo.cpp  FaceInspectInfo.h  FaceInspector.cpp  FaceInspector.h  FeatureBoundedRegionBuilder.cpp  FeatureBoundedRegionBuilder.h  MergeCandidate.cpp  MergeCandidate.h  MergePlanner.cpp  MergePlanner.h  MergeRegionGrower.cpp  MergeRegionGrower.h  PlaneRegionMerger.cpp  PlaneRegionMerger.h  RegionBoundaryAnalyzer.cpp  RegionBoundaryAnalyzer.h  RegionMergeOptions.h  RegionMergeResult.h  RegionMergeStub.cpp  RegionMergeStub.h  SameDomainUnifier.cpp  SameDomainUnifier.h  SphereRegionMerger.cpp  SphereRegionMerger.h  SurfaceRefitter.cpp  SurfaceRefitter.h  TorusRegionMerger.cpp  TorusRegionMerger.h
src/validate/: ErrorMetric.cpp  ErrorMetric.h  ReportGenerator.cpp  ReportGenerator.h  SewingChecker.cpp  SewingChecker.h  ShapeValidator.cpp  ShapeValidator.h
tests/: test_analytic_candidate_detection.cpp  test_boundary_wire_builder.cpp  test_candidate_type_statistics.cpp  test_commands.cpp  test_face_inspect.cpp  test_feature_bounded_region_builder.cpp  test_feature_edges.cpp  test_merge_planner.cpp  test_plane_region_merge_command.cpp  test_plane_region_merger.cpp  test_region_boundary_analyzer.cpp  test_region_merge_stubs.cpp  test_same_domain_merge.cpp  test_sphere_region_merge_command.cpp  test_sphere_region_merger.cpp  test_step_io.cpp  test_topology_graph.cpp  test_validation.cpp
tools/: batch_optimize.cpp  step_stats.cpp
